simple css siteswap animator

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 	<head>
+		<link rel="stylesheet" href="animate.css" />
 		<link rel="stylesheet" href="style.css" />
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/juggling_animation.js"></script>
 	</head>
 	<body>
 		<header>
