--- a/views/valid_patterns.erb
+++ b/views/valid_patterns.erb
@@ -1,4 +1,6 @@
 <section>
 	<h1>Patterns that match your criteria:</h1>
-	<p><%= @@siteswap.all_patterns %></p>
+	<%= @@siteswap.all_patterns %>
+	<ul id="canvas">
+	</ul>
 </section>
