--- a/views/valid_patterns.erb
+++ b/views/valid_patterns.erb
@@ -1,5 +1,5 @@
 <section>
-	<h1>Patterns that match your criteria:</h1>
+	<h1>Juggling patterns with <%= @@siteswap.props %> objects:</h1>
 	<%= @@siteswap.all_patterns %>
 	<ul id="canvas">
 	</ul>
