--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,11 @@ header h1 {
 	font-weight: normal;
 }
 
+header a {
+	text-decoration: none;
+	color: #000;
+}
+
 header h2 {
 	margin-top: 12px;
 	float: right;
@@ -76,16 +81,21 @@ form ul {
 form li {
 	position: relative;
 	float: left;
-	margin: 0 0 20px 0;
-	width: 300px;
+	margin: 0 0 20px 100px;
+	width: 175px;
+}
+
+form #props input {
+	margin-left: 12px;
 }
 
 form input {
-	margin-left: 75px;
+	margin-left: 10px;
 }
 
 .button {
 	float: right;
+	clear: both;
 }
 
 .clear {
@@ -93,6 +103,17 @@ form input {
 	border: 0;
 }
 
-section span {
+section {
+	width: 600px;
+	clear: both;
+}
+
+section li.pattern {
 	margin-right: 10px;
+	position: relative;
+	float: left;
+}
+
+#patterns {
+	width: 640px;
 }
