--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,11 +4,13 @@
 		<link rel="stylesheet" href="style.css" />
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/juggling_animation.js"></script>
+		
+		
 	</head>
 	<body>
 		<header>
 			<hgroup>
-				<h1>Siteswap</h1>
+				<h1><a href="/">Siteswap</a></h1>
 				<h2>Throw Patterns for Jugglers</h2>
 			</hgroup>
 		</header>
